svg icon, create about page, fix gaps in data

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -12,12 +12,3 @@
   align-items: center;
   margin-bottom: 0.5rem;
 }
-
-.wrapper {
-  margin-top: 0.75rem;
-  height: 100%;
-}
-
-.button {
-  margin-top: 1rem;
-}
